feat: Unified academic agent with PDF export functionality
- Merged parsing and summarizing into single AcademicAgent
- Simplified API endpoints: /parse, /parse-file, /summarize, /summarize-file
- Added comprehensive PDF export functionality with formatted reports
- Moved legacy files to legacy/ folder for backup
- Removed context limits for better full-content processing
- Enhanced summarization prompts to use bullet point format
- Added reportlab and markdown dependencies for PDF generation
- Maintained backward compatibility with existing functionality

New Features:
- /parse/export-pdf and /parse-file/export-pdf for parsing results
- /summarize/export-pdf and /summarize-file/export-pdf for summary results
- Professional PDF formatting with metadata, tables, and proper styling
- Enhanced OCR support and file processing capabilities

Breaking Changes:
- Removed multiple endpoint variations
- Consolidated agents into single unified system

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,10 @@ Pillow>=9.1.0,<11.0.0  # Image processing
 python-magic-bin>=0.4.0,<1.0.0  # For Windows file type detection
 opencv-python>=4.8.0,<5.0.0  # Advanced image preprocessing for better OCR
 
+# PDF Generation
+reportlab>=4.0.0,<5.0.0  # PDF generation
+markdown>=3.4.0,<4.0.0  # Markdown processing for better formatting
+
 # Environment management
 python-dotenv>=1.0.0,<2.0.0
 
